# mysnihub

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
tests/: SomeTests.cpp
